cmake_minimum_required(VERSION 3.17)
project(StarsWars)

set(CMAKE_CXX_STANDARD 14)

add_executable(StarsWars main.cpp Humanoide.cpp Humanoide.h Princesse.cpp Princesse.h Empire.cpp Empire.h Rebel.cpp Rebel.h Barman.cpp Barman.h Yoda.cpp Yoda.h Alliance.cpp Alliance.h Hors_la_loi.cpp Hors_la_loi.h Traitre.cpp Traitre.h Princessetraitre.cpp Princessetraitre.h)